<resources>
    <string name="app_name">LearningKotlin</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bike">Bike</string>
    <string name="general">General</string>
    <string name="entertainment">Entertainment</string>
    <string name="sports">Sports</string>
    <string name="business">Business</string>
    <string name="technology">Technology</string>
    <string name="education">Education</string>
    <string name="health">Health</string>
</resources>