<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.NewsFragment">
    <HorizontalScrollView
        android:id="@+id/topCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/rec"
        app:layout_constraintTop_toTopOf="parent">
        <LinearLayout
            android:id="@+id/Headings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/general"
                android:layout_margin="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/general" />

            <Button
                android:id="@+id/entertainment"
                android:layout_margin="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/entertainment" />

            <Button
                android:id="@+id/sports"
                android:layout_margin="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sports" />

            <Button
                android:id="@+id/business"
                android:layout_margin="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/business" />

            <Button
                android:id="@+id/technology"
                android:layout_margin="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/technology" />

            <Button
                android:id="@+id/education"
                android:layout_margin="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/education" />

            <Button
                android:id="@+id/health"
                android:layout_margin="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/health" />
        </LinearLayout>
    </HorizontalScrollView>
    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="#F1ECEE"
        app:layout_constraintTop_toBottomOf="@id/topCategory"
        tools:listitem="@layout/row_item"
        android:id="@+id/rec"/>
</androidx.constraintlayout.widget.ConstraintLayout>